--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_executable(main main.cc computearithmetic.cc computepi.cc printseries.cc writeseries.cc)
+add_executable(main main.cc computearithmetic.cc computepi.cc dumperseries.cc printseries.cc writeseries.cc)
